tests/scripts/errors/runtime/throw_uncaught.cdo
THROW "validation", 422, "missing 'name'";
